added download resume link in side bar.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <!--<li class="website"><i class="fa fa-globe"></i><a href="#" target="_blank">portfoliosite.com</a></li>-->
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/aniket-satarkar/" target="_blank">linkedin.com/in/aniket-satarkar</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="http://github.com/aniketsatarkar" target="_blank">github.com/aniketsatarkar</a></li>
+                    <li ><i class="fa fa-download" aria-hidden="true"></i><a href="#" target="_blank">Download Resume</a></li>
                     <!--<li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@twittername</a></li>-->
                 </ul>
             </div><!--//contact-container-->
