updated the profile text and removed linkedin link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html lang="en">
   <!--<![endif]-->
   <head>
-    <title>Full Stack Software Developer | Aniket Satarkar</title>
+    <title>Full Stack Web Developer | Aniket Satarkar</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -40,19 +40,26 @@
         <div class="profile-container">
           <img class="profile" src="assets/images/profile.png" alt="" />
           <h1 class="name">Aniket Satarkar</h1>
-          <h3 class="tagline">Full Stack Software Developer</h3>
+          <h3 class="tagline">Full Stack Web Developer</h3>
         </div>
 
         <div class="contact-container container-block">
           <ul class="list-unstyled contact-list">
-            <li class="email"><i class="fa fa-envelope"></i><a
-                href="mail:aniketsatarkar9@gmail.com">aniketsatarkar9@gmail.com</a></li>
-            <li class="phone"><i class="fa fa-mobile"></i><a href="tel:917304430471">+91-7304430471</a></li>
-            <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/aniket-satarkar/"
-                target="_blank">linkedin.com/in/aniket-satarkar</a></li>
-            <li class="github"><i class="fa fa-github"></i><a href="http://github.com/aniketsatarkar"
-                target="_blank">github.com/aniketsatarkar</a></li>
-            <li><i class="fa fa-download" aria-hidden="true"></i><a href="#" target="_blank">Download Resume</a></li>
+            <li class="email"><i class="fa fa-envelope">
+              </i><a href="mail:aniketsatarkar9@gmail.com">aniketsatarkar9@gmail.com</a>
+            </li>
+            <li class="phone">
+              <i class="fa fa-mobile"></i><a href="tel:917304430471">+91-7304430471</a>
+            </li>
+            <!-- <li class="linkedin">
+              <i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/aniket-satarkar/"target="_blank">linkedin.com/in/aniket-satarkar</a>
+            </li> -->
+            <li class="github">
+              <i class="fa fa-github"></i><a href="http://github.com/aniketsatarkar" target="_blank">github.com/aniketsatarkar</a>
+            </li>
+            <li>
+              <i class="fa fa-download" aria-hidden="true"></i><a href="#" target="_blank">Download Resume</a>
+            </li>
           </ul>
         </div>
         <div class="education-container container-block">
@@ -88,9 +95,11 @@
         <section class="section summary-section">
           <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
           <div class="summary text-justified">
-            <p>Full stack developer having 3+ years of experience & proficient in Laravel, CodeIgniter, Angular, Ionic & Vue.js
+            <p>
+              Full stack developer having 4+ years of experience & proficient in Laravel, CodeIgniter, Angular, Ionic & Vue.js
               frameworks and other related technologies. Had delivered over dozens of projects. Able to work in every stage of
-              development process with time efficient approach.</p>
+              development process with time efficient approach.
+            </p>
           </div>
         </section>
 
@@ -253,22 +262,14 @@
         </section>
       </div>
     </div>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="text-center">
         <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com"
             target="_blank">Xiaoying Riley</a> for developers</small>
       </div>
-    </footer>
+    </footer> -->
     <script type="text/javascript" src="assets/plugins/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
   </body>
-
-  <!-- 
-    PHP - Laravel/CodeIgniter
-    JavaScript - Vue.js/Angular/jQuery/Express/Quasar/Nuxt
-    DB - MySQL/Redis/MongoDB
-    CSS - Bootstrap-4/Ionic/Onsen/ElementUI 
-  -->
-
 </html>
